# negative.rs

./: Cargo.toml  README.md  cargo_publish.sh  rust-toolchain.toml
.github/workflows/: CI.yml  future-proof.yml
src/: _lib.rs  compile_fail_tests.md
src/proc_macros/: Cargo.toml  _mod.rs
tests/: coherence.rs  unit_struct_non_send_sync.rs
